[HUBZERO][#7603][COM_TOOLS] Try to force everything in the app-wrap to a specific font group to avoid potential spacing and sizing issues

--- a/components/com_tools/assets/css/tools.css
+++ b/components/com_tools/assets/css/tools.css
@@ -90,6 +90,7 @@
 		padding: 0;
 	}
 	#app-wrap {
+		font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 		margin: 30px;
 		padding: 0;
 		float: left;
@@ -189,7 +190,6 @@
 		border: none;
 	}
 	#app-header h2 {
-		font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 		font-weight: bold;
 		font-size: 1em;
 		line-height: 1.2em;
@@ -554,7 +554,6 @@
 		white-space: nowrap;
 		font-size: 2em;
 		line-height: 1;
-		font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	}
 	#app-header a.options span:before {
 		content: "\2699";
